--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -16,3 +16,8 @@
 .navLinkCon:hover{
     text-decoration: none;
 }
+@media screen and (min-width:767px) {
+    .navItemsHolder li{
+        font-size: 17px !important;
+    }
+}
